manifests/4_virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        prefix: /token/api/v1
    route:
    - destination:
        host: certapi
        port:
          number: 80  
  - match:
    route:
    - destination:
        host: httpbin
        port:
          number: 8000
